fix the problem of DnD